Revert "Add Icons and Fix Spacing (#25)"
This reverts commit 943f5c03d567ad4de69c64f19898091231b53178.

--- a/frontend/src/app/coworking/widgets/coworking-reservation-card/coworking-reservation-card.css
+++ b/frontend/src/app/coworking/widgets/coworking-reservation-card/coworking-reservation-card.css
@@ -17,12 +17,12 @@
 
 h3 {
     font-size: 18px;
-    display: flex;
-    align-items: center;
+    margin-bottom: 0px;
 }
 
-h3>span {
-    margin-right: 8px;
+h3>label {
+    width: 64px;
+    display: inline-block;
 }
 
 p {
